--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
   <head>
     <title>PEP Chat Demo</title>
     <link href='css/style.css' rel='stylesheet' type='text/css'>
-    <script src="/js/ajax.js"></script>
+    <script src="js/ajax.js"></script>
   </head>
 
   <body>
